// Copyright (C) 2023 Felix Huettner
//
// This file is part of DTRD.
//
// DTRD is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// DTRD is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

package replication.messages;

import "google/protobuf/timestamp.proto";

message ObjectMeta {
  google.protobuf.Timestamp last_modified = 1;
  uint64 size = 2;
  string md5sum = 3;
  string sha256sum = 4;
}

enum EventType {
  PUT = 0;
  DELETE = 1;
}

message Event {
  EventType type = 1;
  uint64 version = 2;
  string object_name = 3;
  ObjectMeta object_meta = 4;
}

message BucketEvent {
  string bucket_name = 1;
  repeated Event events = 2;
}
